--- a/index.html
+++ b/index.html
@@ -10,10 +10,24 @@
   <link rel="stylesheet" href="./dist/styles.css">
 </head>
 <body>
-  <header>
-  <header/>
+  <main class="foreground" >
+    <section class="row">
+      <div class="quizbox col--12">
+        <div class="quizbox__question">
+          <h3> Rosa Fín Spurning </h3>
+          <div class="answerbox row">
+              <div class="answer col--6"></div>
+              <div class="answer col--6"></div>
+              <div class="answer col--6"></div>
+              <div class="answer col--6"></div>
+          </div>
+        </div>
+        
+      </div>
+    </section>
+  </main>
 
-
-  <script src="./dist/bundle.js"></script>
+<script src="./dist/bundle.js"></script>
 </body>
+
 </html>
