--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="icon" href="img\favicon.png" type="image/x-icon"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Reboot</title>
@@ -11,17 +12,39 @@
 </head>
 <body>
   <main class="foreground" >
-    <section class="row">
+    <section class="">
       <div class="quizbox col--12">
         <div class="quizbox__question">
-          <h3> Rosa Fín Spurning </h3>
-          <div class="answerbox row">
-              <div class="answer col--6"></div>
-              <div class="answer col--6"></div>
-              <div class="answer col--6"></div>
-              <div class="answer col--6"></div>
+          <div class="  ">
+            <div class="welcome">
+              <h3>Welcome!</h3>
+            </div>
+            <div class="main__question">
+              <h1>How are you feeling?</h1  >
+            </div>
           </div>
-        </div>
+          <div class="answerbox row">
+              <div class="answer col--6">
+                <div class="answer__box__img">  
+                  <img src="/img/food.png" class="answer__img">
+              </div>
+              </div>
+              <div class="answer col--6">
+                <div class="answer__box__img">
+                  <img src="/img/beer.png" class="answer__img">
+                </div>
+              </div>
+              <div class="answer col--6">   
+                <div class="answer__box__img">
+                  <img src="/img/music.png" class="answer__img">
+                </div> 
+              </div>    
+              <div class="answer col--6">  
+                  <div class="answer__box__img">
+              <img src="/img/theater.png" class="answer__img">
+              </div>
+          </div>
+        
         
       </div>
     </section>
