Smá virkni komin með JSON gögnum

--- a/index.html
+++ b/index.html
@@ -23,24 +23,24 @@
               <h1>How are you feeling?</h1  >
             </div>
           </div>
-          <div class="answerbox row">
-              <div class="answer col--6">
-                <div class="answer__box__img">  
+          <div class="answerbox row type_null">
+              <div class="answer col--6 type_hungry">
+                <div class="answer__box__img type_hungry">  
                   <img src="/img/food.png" class="answer__img">
               </div>
               </div>
-              <div class="answer col--6">
-                <div class="answer__box__img">
+              <div class="answer col--6 type_thirsty">
+                <div class="answer__box__img type_thirsty">
                   <img src="/img/beer.png" class="answer__img">
                 </div>
               </div>
-              <div class="answer col--6">   
-                <div class="answer__box__img">
+              <div class="answer col--6 type_music">
+                <div class="answer__box__img type_music">
                   <img src="/img/music.png" class="answer__img">
                 </div> 
               </div>    
-              <div class="answer col--6">  
-                  <div class="answer__box__img">
+              <div class="answer col--6 type_theater">  
+                  <div class="answer__box__img type_food">
               <img src="/img/theater.png" class="answer__img">
               </div>
           </div>
